@@ -1,3 +1,15 @@
+2009-09-08  Alan Modra  <amodra@bigpond.net.au>
+
+	* binutils-all/objdump.exp (cpus_expected): Add ms1.
+
+2009-09-07  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* binutils-all/testranges.s (.debug_info): Pad the only CU.
+
+2009-09-07  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* binutils-all/testranges.s: Replace all .long by .4byte.
+
 2009-09-04  DJ Delorie  <dj@redhat.com>
 
 	* binutils-all/objdump.exp: Add m16c and m32c to the list of
